@@ -1,6 +1,4 @@
 
-- Meta data for 'Album' seems not to be parsed correctly (read is missing) in search results.
-
 - Why do so many source go into 'timed out' state and are not removed? should they be?
   Update: I think it is giFT which times out the sources. Not sure what to do about it.
 
