@@ -1,4 +1,6 @@
- $Id: ChangeLog,v 1.5 2005/02/10 17:23:35 mkern Exp $
+ $Id: ChangeLog,v 1.6 2005/02/28 14:19:14 mkern Exp $
+
+	* Fixed missing album meta data in search results
 
 	* Fixed crash on duplicate hash search.
 
